Update personal page content and resource links

--- a/src/pages/personal.astro
+++ b/src/pages/personal.astro
@@ -3,10 +3,10 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 const base = import.meta.env.BASE_URL;
 
 const slides = [
-  { src: "DSC_7569_1.jpg", caption: "Caption for image 1" },
-  { src: "_1182.jpg", caption: "Caption for image 2" },
-  { src: "~1126.jpg", caption: "Caption for image 3" },
-  { src: "~1138.jpg", caption: "A ferry ride from Sultan Batteri in Mangalore, India (shot on 35mm film)" },
+  { src: "DSC_7569_1.jpg", caption: "A ferry ride from Sultan Batteri in Mangalore, India (shot on 35mm film)" },
+  { src: "_1182.jpg", caption: "Hong Kong's skyline from the Victoria Peak Loop trail (shot on 35mm film)" },
+  { src: "~1126.jpg", caption: "Random skyscrapers in NYC (shot on 35mm film)" },
+  { src: "~1138.jpg", caption: "My favorite street in New Haven (shot on 35mm film)" },
 ];
 ---
 
@@ -40,20 +40,16 @@ const slides = [
   <h2 class="section-header">Mentorship</h2>
 
   <p>
-    I believe that supportive mentorship can help solve for some of the information barriers
-    that limit access to career and educational opportunities, especially for those from
-    marginalized backgrounds.
+    I believe that supportive mentorship can help solve for some of the information barriers that limit access
+    to career and educational opportunities, especially for those from marginalized backgrounds. When I decided
+    to study economics further, I benefited greatly from my privileged access to people in the know. I now hope to pay it forward:
+    feel free to reach out at <a href="mailto:ayush.shahi@yale.edu">ayush.shahi@yale.edu</a> if you have any queries
+    about graduate school applications. I will try to help out in whatever way I can.
   </p>
 
-  <p>
-    Please feel free to reach out to me at <a href="mailto:ayush.shahi@yale.edu">ayush.shahi@yale.edu</a> if
-    you have any questions regarding graduate school applications.
-  </p>
-
-  <p>
-    I volunteer with <a href="https://bahujanecon.org" target="_blank" rel="noopener">Bahujan Economists</a>,
-    an organization focused on increasing representation of historically marginalized communities in
-    economics research.
+   <p>
+    I am currently volunteering as a mentor with <a href="https://bahujanecon.org" target="_blank" rel="noopener">Bahujan Economists</a>,
+    an organization working to increase representation of historically marginalized castes, tribes, and religious communities in Economics research.
   </p>
 
   <h2 class="section-header">Resources for Economics Graduate School</h2>
@@ -63,10 +59,10 @@ const slides = [
       <a href="https://hackmd.io/@rdrsas/econgradsch" target="_blank" rel="noopener">A Guide to Econ Grad School Applications (esp. for Indians)</a>
     </li>
     <li>
-      <a href="https://magenta-editorial-197.notion.site" target="_blank" rel="noopener">How to prepare for the GRE</a>
+      <a href="https://magenta-editorial-197.notion.site/How-2-GRE-fe97eacfa516410789977f214de94fdb" target="_blank" rel="noopener">How to prepare for the GRE</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/playlist?list=PLDesaqWTN6ESPaHy7QUKVmD41WTcNqhCd" target="_blank" rel="noopener">The Tested Tutor's GRE quantitative preparation playlist</a>
+      <a href="https://www.youtube.com/@TheTestedTutor/playlists" target="_blank" rel="noopener">The Tested Tutor's GRE quantitative preparation playlist</a>
     </li>
   </ul>
 
