--- a/src/pages/personal.astro
+++ b/src/pages/personal.astro
@@ -44,11 +44,11 @@ const slides = [
     to career and educational opportunities, especially for those from marginalized backgrounds. When I decided
     to study economics further, I benefited greatly from my privileged access to people in the know. I now hope to pay it forward:
     feel free to reach out at <a href="mailto:ayush.shahi@yale.edu">ayush.shahi@yale.edu</a> if you have any queries
-    about graduate school applications. I will try to help out in whatever way I can.
+    about graduate school applications.
   </p>
 
    <p>
-    I am currently volunteering as a mentor with <a href="https://bahujanecon.org" target="_blank" rel="noopener">Bahujan Economists</a>,
+    I volunteer as a mentor with <a href="https://bahujanecon.org" target="_blank" rel="noopener">Bahujan Economists</a>,
     an organization working to increase representation of historically marginalized castes, tribes, and religious communities in Economics research.
   </p>
 
