Refine wording in personal.astro for clarity

--- a/src/pages/personal.astro
+++ b/src/pages/personal.astro
@@ -55,7 +55,7 @@ const slides = [
   <h2 class="section-header">Resources for Econ Grad School Applications</h2>
 
   <p>
-  Some resources I found helpful while I was applying to Economics Master's programs:
+  Some resources I found helpful while applying to Economics Master's programs:
   </p>
 
   <ul>
